--- a/package.json
+++ b/package.json
@@ -1,20 +1,76 @@
 {
-  "name": "dog",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "name": "dogerat-enhanced",
+  "version": "2.0.0",
+  "description": "Enhanced Android RAT with advanced features for remote device management via Telegram bot",
+  "main": "enhanced_server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node enhanced_server.js",
+    "start:enhanced": "node start_enhanced.js",
+    "start:original": "node server.js",
+    "dev": "nodemon enhanced_server.js",
+    "test": "npm run test:connection",
+    "test:connection": "node -e \"require('./modules/networkTools.js'); console.log('Network tools loaded successfully');\"",
+    "setup": "node start_enhanced.js",
+    "logs": "tail -f *.log",
+    "clean": "rm -rf uploads/* downloads/* *.log",
+    "backup": "tar -czf backup_$(date +%Y%m%d_%H%M%S).tar.gz *.json *.js modules/ config/",
+    "install:deps": "npm install && echo 'Dependencies installed successfully'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "android",
+    "rat",
+    "remote-access",
+    "telegram-bot",
+    "device-management",
+    "security-tools",
+    "file-manager",
+    "network-tools",
+    "task-scheduler",
+    "monitoring"
+  ],
+  "author": "DogeRat Enhanced Team",
+  "license": "MIT",
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
   "dependencies": {
-    "body-parser": "^1.20.1",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "node-telegram-bot-api": "^0.59.0",
-    "socket.io": "^4.5.3",
-    "uuid": "^9.0.0"
+    "node-telegram-bot-api": "^0.61.0",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.0",
+    "crypto": "^1.0.1",
+    "fs-extra": "^11.1.1",
+    "moment": "^2.29.4",
+    "chalk": "^4.1.2",
+    "inquirer": "^8.2.5",
+    "commander": "^11.0.0",
+    "winston": "^3.10.0",
+    "node-cron": "^3.0.2",
+    "ping": "^0.4.4",
+    "portscanner": "^2.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "jest": "^29.6.2",
+    "eslint": "^8.45.0",
+    "prettier": "^3.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-repo/DogeRat-Enhanced.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-repo/DogeRat-Enhanced/issues"
+  },
+  "homepage": "https://github.com/your-repo/DogeRat-Enhanced#readme",
+  "config": {
+    "port": 3000,
+    "host": "0.0.0.0"
+  },
+  "bin": {
+    "dogerat": "./start_enhanced.js"
   }
 }
